# PagerMaid-Modify

./: .cnb.yml  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.alpine  Dockerfile.persistant  INSTALL.md  LICENSE  MANIFEST.in  README.md  _coverpage.md  _sidebar.md  archlinux.md  centos7.md  config.gen.yml  crowdin.yml  docker-compose.gen.yml  index.html  install.sh  pyproject.toml  railway.md  requirements.txt  setup.py  ubuntu.md  ubuntu16.md  ubuntu20.md  wsl.md
.github/: FUNDING.yml  bug_report_en.md
.github/ISSUE_TEMPLATE/: bug_report_en.md  bug_report_zh.md  feature_request_en.md  feature_request_zh.md
.github/workflows/: docker.yml  main.yml  python.yml  sentry.yml
languages/: languages.py
languages/built-in/: en.yml  ja.yml  zh-cn.yml  zh-tw.yml
pagermaid/: __init__.py  __main__.py  config.py  hook.py  inject.py  listener.py  utils.py  version.py
pagermaid/assets/: caption-gif.sh  caption.sh  config.gen.yml  pagermaid  replacements.json
pagermaid/bots/: __init__.py  captions.py  clock.py  external.py  fun.py  help.py  message.py  qr.py  status.py  system.py  update.py
pagermaid/common/: ignore.py  plugin.py  reload.py  system.py
pagermaid/dependence/: _scheduler.py
pagermaid/enums/: _client.py  command.py
pagermaid/interface/: __init__.py  (+4 more)
plugins/: README
some-plugins/: dme.py  sendat.py  xtao-some.py  yb-dl.py  yt-dl.py
utils/: convert_session.py  docker-config.sh  docker-run.sh  docker.md  docker.sh  entrypoint.sh  gensession.py  mksession.py  pagermaid-docker.service  pagermaid-pip.service  pagermaid.service  run  start.sh
(+56 files in other folders)
