[project]
name = "PagerMaid-Modify"
version = "0.1.0"
description = "Advanced Multi-Featured Telegram UserBot by telethon."
authors = [
    {name = "xtaodada", email = "xtao@xtao.de"},
]
dependencies = [
    "telethon @ git+https://github.com/TeamPGM/Telethon@1.5.0",
    "cryptg>=0.5.1",
    "Pillow<11.0.0; python_version < '3.9'",
    "Pillow>=11.0.0; python_version >= '3.9'",
    "pytz>=2024.2",
    "PyYAML>=6.0.2",
    "coloredlogs>=15.0.1",
    "psutil>=6.0.0",
    "httpx[socks]>=0.27.2",
    "apscheduler>=3.10.4",
    "sqlitedict>=2.1.0",
    "casbin>=1.36.3",
    "sentry-sdk>=2.14.0",
    "PyQRCode>=1.2.1",
    "PyPng",
    "fastapi>=0.115.5",
    "amis-python==1.0.8.post2",
    "uvicorn>=0.32.0",
    "pydantic<2.0.0",
    "starlette>=0.41.2",
    "pyjwt>=2.9.0",
    "python-socks[asyncio]>=2.7.1",
]
requires-python = ">=3.8.0"
readme = "README.md"
license = {text = "AGPL 3.0+"}

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
